# ikf_lib

./: AUTHORS  CMakeLists.txt  LICENSE  README.md  configure  ikf_lib-config.cmake
.github/workflows/: ci.yml
cmake/: CompileOptions.cmake  EigenConfig.cmake  Findmatplot.cmake  GenerateTemplateExportHeader.cmake
deploy/: CMakeLists.txt
docs/api-docs/: CMakeLists.txt  doxyfile.in
resources/diagrams/: MMSF-diag.drawio  ikf-lib-diag.drawio
source/: CMakeLists.txt
source/codegeneration/: ikf_api.h.in  ikf_msvc_api.h.in
source/examples/: CMakeLists.txt
source/examples/ikf_cmd/: CMakeLists.txt  SimInstance.hpp  Trajectory.hpp  main.cpp
source/examples/ikf_delay_cmd/: CMakeLists.txt  main.cpp
source/examples/ikf_delay_cmd/include/: LinearIKF.hpp  LinearIKF_1D_const_acc.hpp  SimInstance.hpp  SimInstanceDelay.hpp  Trajectory.hpp
source/examples/ikf_simple_cmd/: CMakeLists.txt  main.cpp
source/examples/ikf_simple_cmd/include/: LinearIKF.hpp  SimInstance.hpp  Trajectory.hpp
source/ikf/: CMakeLists.txt
source/ikf/include/ikf/: types.hpp
source/ikf/include/ikf/Container/: THistoryBuffer.hpp  TMultiHistoryBuffer.hpp  TStampedData.hpp  TTimeHorizonBuffer.hpp  Timestamp.hpp
source/ikf/include/ikf/Estimate/: IBelief.hpp  LinearBelief.hpp
source/ikf/include/ikf/Estimator/: IIsolatedKalmanFilter.hpp  IIsolatedKalmanFilterCorr.hpp  IIsolatedKalmanFilterSimple.hpp  IKalmanFilter.hpp  IsolatedKalmanFilterHandler.hpp  KalmanFilter.hpp  LinearBelief.hpp  LinearIKF.hpp  NormalizedInnovationSquared.hpp  ProcessMeasResult_t.hpp
source/ikf/include/ikf/EstimatorHandler/: CI_IKF_Handler.hpp  C_IKF_Handler.hpp  CollaborativeIKFHandler.hpp  DCI_IKF_Handler.hpp  DecoupledPropagationHandler.hpp  ICSE_IKF_Handler.hpp  IDICOHandler.hpp  IMultiAgentHandler.hpp  IsolatedKalmanFilterHandler.hpp  SchmidtKalmanFilterHandler.hpp  eFusionStrategy.hpp
source/ikf/include/ikf/EstimatorStd/: IKFHandlerStd.hpp  IsolatedKalmanFilterStd.hpp  KalmanFilterStd.hpp  LinearIKFStd.hpp
source/ikf/include/ikf/IKF/: IFilterInstance.hpp  IIsolatedKalmanFilter.hpp  IsolatedKalmanFilterHandler.hpp  LinearBelief.hpp  LinearIKF.hpp  SimpleLinearIKF.hpp
source/ikf/include/ikf/Logger/: Logger.hpp
source/ikf/include/ikf/Measurement/: MeasData.hpp  MeasDataConverter.hpp
source/ikf/include/ikf/Sensor/: SensorFactory.hpp  eSensorType.hpp
source/ikf/include/ikf/Sensor/Estimate/: IBelief.hpp  ISensorEstimate.hpp  StateInfo.hpp
source/ikf/include/ikf/Sensor/Estimator/: KalmanFilter.hpp
source/ikf/include/ikf/Sensor/Measurement/: MeasData.hpp
source/ikf/include/ikf/Sensor/Model/: SensorSuite.hpp
source/ikf/include/ikf/Strategies/: ICollaborativeInstanceHandler.hpp  IIKF_DICO.hpp  IInstanceHandle.hpp  IInstanceHandler.hpp  IMMSF.hpp  MMSF_IKF.hpp  ModularInstanceHandler.hpp  eMMSFTypes.hpp
source/ikf/include/ikf/container/: TBuffer.hpp  THistoryBuffer.hpp  TStampedData.hpp  TTimeHorizonBuffer.hpp  Timestamp.hpp
source/ikf/include/ikf/utils/: CSVTool.hpp  CyclicThread.hpp  GaussianNoiseGen.hpp  IO.hpp  MultivariateNormal.hpp  Profiler.hpp  ProgressBar.hpp  QuaternionUtils.hpp  RTVerification.hpp  RandValGenerator.hpp  RandomSampler.hpp  Rate.hpp  UnivariateNormal.hpp  eigen_mvn.hpp  eigen_utils.hpp  lock_guard_timed.hpp  math.hpp  rand_op.hpp
source/ikf/include_local/ikf/: helper.hpp  utils.hpp
source/ikf/source/: SensorFactory.cpp
source/ikf/source/Containers/: Timestamp.cpp
source/ikf/source/Estimate/: IBelief.cpp  LinearBelief.cpp
source/ikf/source/Estimator/: IIsolatedKalmanFilter.cpp  IIsolatedKalmanFilterCorr.cpp  IKalmanFilter.cpp  IsolatedKalmanFilterHandler.cpp  KalmanFilter.cpp  LinearBelief.cpp  LinearIKF.cpp  NormalizedInnovationSquared.cpp  ProcessMeasResult_t.cpp
source/ikf/source/EstimatorHandler/: CI_IKF_Handler.cpp  C_IKF_Handler.cpp  CollaborativeIKFHandler.cpp  DCI_IKF_Handler.cpp  DecoupledPropagationHandler.cpp  ICSE_IKF_Handler.cpp  IDICOHandler.cpp  IMultiAgentHandler.cpp  IsolatedKalmanFilterHandler.cpp  SchmidtKalmanFilterHandler.cpp  eFusionStrategy.cpp
source/ikf/source/EstimatorStd/: IKFHandlerStd.cpp  IsolatedKalmanFilterStd.cpp  KalmanFilterStd.cpp  LinearIKFStd.cpp
source/ikf/source/IKF/: IFilterInstance.cpp  IIsolatedKalmanFilter.cpp  IsolatedKalmanFilterHandler.cpp  LinearBelief.cpp  LinearIKF.cpp  SimpleLinearIKF.cpp
source/ikf/source/Logger/: Logger.cpp
source/ikf/source/Measurement/: MeasData.cpp
source/ikf/source/Sensor/Estimate/: IBelief.cpp  StateInfo.cpp
source/ikf/source/Sensor/Estimator/: KalmanFilter.cpp  NormalizedInnovationSquared.cpp
source/ikf/source/Strategies/: IIKF_DICO.cpp  IInstanceHandle.cpp  IInstanceHandler.cpp  IMMSF.cpp  MMSF_IKF.cpp
source/ikf/source/utils/: CSVTool.cpp  CyclicThread.cpp  GaussianNoiseGen.cpp  IO.cpp  ProgressBar.cpp  RandValGenerator.cpp  RandomSampler.cpp  Rate.cpp  eigen_utils.cpp  math.cpp
source/tests/: CMakeLists.txt  README.md
source/tests/googletest/googlemock/: CMakeLists.txt
source/tests/ikf-test/: CMakeLists.txt  ikf_IKalmanFilter_test.cpp  ikf_LinearIKFStd_test.cpp  ikf_LinearIKF_test.cpp  ikf_TBuffer_test.cpp  ikf_THistoryBuffer_test.cpp  ikf_TMultiHistoryBuffer_test.cpp  ikf_TTHimeHorizonBuffer.cpp  ikf_Timestamp_test.cpp  ikf_eigen_mvn_test.cpp
